# agent-trust-telemetry

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/commands/: lint.md  test.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo/: Dockerfile  README.md  docker-compose.yml  run_demo.py  scenario.jsonl
demo/scenarios/: data_exfiltration.jsonl  metadata_drift.jsonl  multi_hop_chain.jsonl  privilege_escalation.jsonl  role_transition_drift.jsonl
docs/: ADR-001-execution-phase.md  ADR-002-propagation-and-quarantine.md  ADR-003-tool-metadata-and-redaction.md  concept-v4.md  execution_phases.md  future-considerations.md  langgraph-integration-spec.md  layer3-implementation-spec.md  mvp-requirements-v0.3.md
examples/langgraph/: README.md  multi_agent_contamination.py  requirements.txt  simple_chain.py  tool_poisoning_demo.py
rules/builtin/: hidden_instruction.yaml
src/att/: __init__.py  cli.py  evaluator.py  inheritance.py  metadata.py  pipeline.py  scorer.py  session_analyzer.py  session_store.py  taxonomy.py
src/att/exporters/: __init__.py  otel.py
src/att/integrations/: __init__.py
src/att/integrations/langgraph/: __init__.py  callback.py  interrupt.py  state.py  webhook.py
src/att/rules/builtin/: exfiltration.yaml  hidden_instruction.yaml  history_inconsistency.yaml  instruction_override.yaml  privilege_escalation.yaml  secret_access.yaml  tool_misuse.yaml
src/schemas/: envelope.json  output.json
tests/: test_cli.py  test_demo_runner.py  test_evaluator.py  test_inheritance.py  test_layer3.py  test_metadata.py  test_otel_export.py  test_performance.py  test_pipeline.py  test_policy_rules.py  test_scorer.py
tests/integrations/langgraph/: test_callback.py  test_interrupt.py  test_webhook.py
tests/schemas/: test_envelope.py  test_smoke.py
